base_code/logs/OPTUNA_Tuning_8812548.err
  File "/gpfs/home/bdp1083/Code1_5_ModelTraining_9Feb_Ben/optuna_training.py", line 578
    timestamp = datetime.now().strftime("%Y%m%d_%H%M%S")
    ^^^^^^^^^
IndentationError: expected an indented block after 'if' statement on line 576
